@@ -21,6 +21,7 @@
             Lexer speed improvements
             Bangle.js: Compass 'heading' now provides correct value (without 360-heading) required
             Bangle.js: Remove F_BEEPSET feature flag (now 3 years old)
+            Espruino: Ensure flash/native strings really can't be appended to (fix #2282)
 
      2v15 : Fix issue where `E.toJS("\0"+"0") == '"\00"'` which is just `"\0"`
             Fix issue accessing `arguments` after/inside 'let/const' keyword (fix #2224)
